--- a/internet_shop_frontend/src/templates/_navigation.html
+++ b/internet_shop_frontend/src/templates/_navigation.html
@@ -6,9 +6,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-
-
-
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('cabinet') }}">Особистий кабінет</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('signup') }}">Зареєструватись</a>
+              </li>
         </ul>
         </div>
     </nav>
